--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.8",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
