--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.36.0",
+    "aos": "^2.3.4",
     "firebase": "^10.11.1",
     "framer-motion": "^11.1.9",
     "localforage": "^1.10.0",
@@ -18,9 +19,11 @@
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.8",
     "swiper": "^11.1.1"
